[package]
name = "rust-esp32-bme280"
version = "1.0.0"
authors = ["Michael Aspetsberger <aspetsberger@gmail.com>"]
edition = "2018"
resolver = "2"
categories = ["embedded"]
keywords = ["embedded", "esp32", "bme280", "esp32c3" ]
description = "A minimal example for reading the BME280 sensor on an ESP32 using Rust."
repository = "https://github.com/maspetsberger/rust-esp32-bme280"
readme = "Readme.md"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.31", features = ["binstart"] }
esp-idf-hal = "0.35"
embedded-hal = "0.2.7"
bme280 = "0.4.1"
anyhow = "1"


[build-dependencies]
embuild = "0.28"
anyhow = "1"
